# django_project_4

./: .env.example  README.md  attempts_fixture.json  groups_fixture.json  mailings_fixture.json  messages_fixture.json  pyproject.toml  recipients_fixture.json  requirements.txt  users_fixture.json
config/: settings.py  urls.py
mailings/: admin.py  forms.py  models.py  urls.py  views.py
mailings/management/commands/: add_groups.py  add_mailing_models.py  add_users.py  send_mailing.py
mailings/migrations/: 0001_initial.py  0002_alter_attempt_server_response.py  0002_alter_mailing_created_at_alter_mailing_finished_at.py  0003_alter_attempt_options_alter_mailing_options_and_more.py  0004_attempt_owner_mailing_owner_message_owner_and_more.py  0005_alter_mailing_owner_alter_message_owner_and_more.py  0006_alter_attempt_owner.py
mailings/templates/mailings/: attempt_list.html  base.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  main.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  paginate.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
mailings/templatetags/: auth_extras.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_avatar_alter_user_country_and_more.py
users/templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  (+5 more)
