[tool.poetry]
name = "django-project-4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line_length = 119
exclude = '''
(
  /(
    \.git          # в корне проекта
  )/
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
